tempfile/bon/tests/integration/ui/compile_fail/derive_builder.stderr
error: Only structs with named fields are supported
 --> tests/integration/ui/compile_fail/derive_builder.rs:4:1
  |
4 | struct TupleStruct(u32, u32);
  | ^^^^^^

error: Only structs with named fields are supported
 --> tests/integration/ui/compile_fail/derive_builder.rs:7:1
  |
7 | struct TupleStructsAreUnsupported(u32, u32);
  | ^^^^^^

error: only `struct` items are supported by the `#[derive(bon::Builder)]` attribute
 --> tests/integration/ui/compile_fail/derive_builder.rs:9:10
  |
9 | #[derive(Builder)]
  |          ^^^^^^^
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
